# birl_baxter_common

./: README.md
birl_baxter_common/: CMakeLists.txt  (+1 more)
birl_baxter_description/: CMakeLists.txt  package.xml  package.xml~
birl_baxter_description/launch/: pa_demo_scene.rviz
birl_baxter_description/launch/baxter_ft/: baxter_ft_gazebo.launch  baxter_ft_rviz.launch
birl_baxter_description/launch/demo/: ft_demo_scene.launch  ft_gazebo.launch  full_gazebo.launch  full_rviz.launch
birl_baxter_description/launch/pa_box/: pa_box_gazebo.launch  pa_box_gazebo2.launch  pa_box_rviz2.launch  pick_n_place_box_gazebo.launch  place_box_gazebo.launch  place_box_rviz.launch
birl_baxter_description/launch/pa_snap/: pa_snap_gazebo.launch  place_snap_gazebo.launch  place_snap_rviz.launch
birl_baxter_description/launch/sake_gripper/: sake_gazebo.launch  sake_rviz.launch
birl_baxter_description/meshes/container/: bigbox.STL  container.stl
birl_baxter_description/urdf/asus_xtion/: asus_xtion.xacro
birl_baxter_description/urdf/baxter_element/: left_end_pa_effector.urdf.xacro  right_end_pa_effector.urdf.xacro
birl_baxter_description/urdf/baxter_element/baxter/: baxter_ft.urdf  baxter_ft.urdf.xacro  baxter_full.urdf.xacro  baxter_full_option.urdf.xacro  baxter_pa.urdf.xacro  baxter_sake.urdf.xacro
birl_baxter_description/urdf/baxter_element/baxter_base/: baxter_base_ft.urdf.xacro  baxter_base_ft.urdf.xacro~  baxter_base_pa.gazebo.xacro
birl_baxter_description/urdf/baxter_element/baxter_ft/: baxter_ft.urdf  baxter_ft.urdf.xacro
birl_baxter_description/urdf/baxter_element/baxter_pa/: .#baxter_pa_box.urdf.xacro  baxter.gv  baxter_pa_box.urdf  baxter_pa_box.urdf.xacro  baxter_pa_box2.sdf  baxter_pa_box2.urdf  baxter_pa_box2.urdf.xacro  baxter_pa_snap.urdf.xacro  data.sdf  robot_system_config.urdf  robot_system_config.urdf.xacro  test.sdf  test.urdf
birl_baxter_description/urdf/box/box_female/: manifest.xml
birl_baxter_description/urdf/box/box_female/launch/: display.launch  gazebo.launch
birl_baxter_description/urdf/box/box_female/meshes/: box_female.STL
birl_baxter_description/urdf/box/box_female/robots/: box_female.URDF
birl_baxter_description/urdf/box/box_male/: manifest.xml
birl_baxter_description/urdf/box/container/: container.xacro
birl_baxter_description/urdf/box/picking_box/: box.stl  picking_box.STL
birl_baxter_description/urdf/ft/: manifest.xml
birl_baxter_description/urdf/ft/launch/: display.launch  gazebo.launch
birl_baxter_description/urdf/ft/meshes/: FT.STL  FT_Top_Plate.STL  FT_bottom_plate.STL
birl_baxter_description/urdf/ft/robots/: FT_Electric3.URDF  FT_Electric_left.URDF  FT_Electric_right.URDF
birl_baxter_description/urdf/snap/snap_female/: manifest.xml
birl_baxter_description/urdf/snap/snap_male/: manifest.xml
birl_baxter_description/urdf/table/: table.urdf  table.xacro  table_front.xacro  table_right_side.xacro
birl_gripper_description/: CMakeLists.txt  package.xml
birl_gripper_description/meshes/electric_gripper/forcesensor/: ezgripper_plate_Link.STL  forcesensor.STL  forecesensor_bottom_link.STL
birl_gripper_description/meshes/male_camera/: camera_frame.STL  male_holder.STL
birl_gripper_description/urdf/electric_gripper/: rethink_electric_pa_gripper.xacro
birl_gripper_description/urdf/electric_gripper/fingers/: pa_finger.xacro  pa_tip.xacro
birl_gripper_description/urdf/sake_gripper/: .#ezgripper_dual.urdf_left.xacro  ezgripper_dual.urdf.xacro
(+13 files in other folders)
