<?xml version="1.0"?>
<package>
  <name>birl_baxter_description</name>
  <version>0.1.0</version>
  <description>
    Description of PA demo scene, using Baxter Research Robot from Rethink Robotics and
    a self-modified gripper. This package contains the URDF and meshes describing this robot system.
  </description>

  <maintainer email="522181941@qq.com.com">
    BIRL
    Ben
  </maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>baxter_gazebo</build_depend>
  <build_depend>baxter_description</build_depend>
  <build_depend>birl_gripper_description</build_depend>
  <build_depend>rethink_ee_description</build_depend>
  
  <run_depend>baxter_description</run_depend>
  <run_depend>rethink_ee_description</run_depend>
  <run_depend>birl_gripper_description</run_depend>
  <run_depend>baxter_gazebo</run_depend>
</package>
